--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<section>
 					<h2>REST</h2>
 					<p>
-					REST services allow you to interact with a webservice the same way you interact with HTTP.
+					REST services allow you to interact with a web service the same way you interact with HTTP.
 					</p>
 				</section>
 
@@ -132,7 +132,7 @@
 
 				<section>
 					<h2>Webhooks</h2>
-					Programatic signals that you can send to your application anytime the state of you care about changes.
+					Signals that you can send to your application anytime the state of you care about changes.
 				</section>
 
 				<section>
@@ -142,7 +142,7 @@
 
 				<section>
 					<h2>Streaming</h2>
-					Sometimes known as a realtime connection. What happens is tht it opens a connection and gives you serial data as it happens. Most popular example is Twitter. You usually need a worker running to work with this data.
+					Sometimes known as a realtime connection. What happens is that it opens a connection and gives you serial data as it happens. Most popular example is Twitter. You usually need a worker running to work with this data.
 				</section>
 
 				<section>
@@ -157,7 +157,7 @@
 
 				<section>
 					<h2>How to Work with JSON</h2>
-					Most langauges have a way to work with JSON built in.
+					Most languages have a way to work with JSON built in.
 				</section>
 
 				<section>
